// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders StartPanel for board of experts unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--board-of-experts"
      >
        <span
          class="styles-module__root___-ALla"
        >
          <span
            class="styles-module__trigger___V2aIF"
            id="base-ui-:rd:"
          >
            <span
              aria-label="boardOfExperts"
            >
              <svg
                class="lucide lucide-users"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="9"
                  cy="7"
                  r="4"
                />
                <path
                  d="M22 21v-2a4 4 0 0 0-3-3.87"
                />
                <path
                  d="M16 3.13a4 4 0 0 1 0 7.75"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
    </div>
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <section
              class="memori--settings-section"
            >
              <div
                class="memori--settings-section__row"
              >
                <div
                  aria-hidden="true"
                  class="memori--settings-section__icon-box memori--settings-section__icon-box--neutral"
                >
                  <svg
                    class="lucide lucide-eye memori--settings-section__icon"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="3"
                    />
                  </svg>
                </div>
                <div
                  class="memori--settings-section__content"
                >
                  <div
                    class="memori--settings-section__title-inline"
                  >
                    <p
                      class="memori--settings-section__title"
                    >
                      write_and_speak.pagePrivacyExplanation
                    </p>
                  </div>
                  <p
                    class="memori--settings-section__description"
                  >
                    write_and_speak.pagePrivacyExplanationList.authorUsesInfo
                  </p>
                </div>
                <span
                  class="styles-module__root___-ALla"
                >
                  <span
                    class="styles-module__trigger___V2aIF"
                    id="base-ui-:rf:"
                  >
                    <button
                      aria-label="privacyPolicy"
                      class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--settings-section__info-trigger"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="memori-button__content"
                      >
                        <svg
                          class="lucide lucide-info memori--settings-section__inline-info-icon"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </section>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.tryMeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel on instruct unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <section
              class="memori--settings-section"
            >
              <div
                class="memori--settings-section__row"
              >
                <div
                  aria-hidden="true"
                  class="memori--settings-section__icon-box memori--settings-section__icon-box--neutral"
                >
                  <svg
                    class="lucide lucide-eye memori--settings-section__icon"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="3"
                    />
                  </svg>
                </div>
                <div
                  class="memori--settings-section__content"
                >
                  <div
                    class="memori--settings-section__title-inline"
                  >
                    <p
                      class="memori--settings-section__title"
                    >
                      write_and_speak.pagePrivacyExplanation
                    </p>
                  </div>
                  <p
                    class="memori--settings-section__description"
                  >
                    write_and_speak.pagePrivacyExplanationList.authorUsesInfo
                  </p>
                </div>
                <span
                  class="styles-module__root___-ALla"
                >
                  <span
                    class="styles-module__trigger___V2aIF"
                    id="base-ui-:r15:"
                  >
                    <button
                      aria-label="privacyPolicy"
                      class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--settings-section__info-trigger"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="memori-button__content"
                      >
                        <svg
                          class="lucide lucide-info memori--settings-section__inline-info-icon"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </section>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageInstructExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.instructButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <section
              class="memori--settings-section"
            >
              <div
                class="memori--settings-section__row"
              >
                <div
                  aria-hidden="true"
                  class="memori--settings-section__icon-box memori--settings-section__icon-box--neutral"
                >
                  <svg
                    class="lucide lucide-eye memori--settings-section__icon"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="3"
                    />
                  </svg>
                </div>
                <div
                  class="memori--settings-section__content"
                >
                  <div
                    class="memori--settings-section__title-inline"
                  >
                    <p
                      class="memori--settings-section__title"
                    >
                      write_and_speak.pagePrivacyExplanation
                    </p>
                  </div>
                  <p
                    class="memori--settings-section__description"
                  >
                    write_and_speak.pagePrivacyExplanationList.authorUsesInfo
                  </p>
                </div>
                <span
                  class="styles-module__root___-ALla"
                >
                  <span
                    class="styles-module__trigger___V2aIF"
                    id="base-ui-:r1:"
                  >
                    <button
                      aria-label="privacyPolicy"
                      class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--settings-section__info-trigger"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="memori-button__content"
                      >
                        <svg
                          class="lucide lucide-info memori--settings-section__inline-info-icon"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </section>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.tryMeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with completion provider down unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <span
          class="styles-module__root___-ALla memori--completion-provider-status--tooltip"
        >
          <span
            class="styles-module__trigger___V2aIF"
            id="base-ui-:r1o:"
          >
            <svg
              class="lucide lucide-triangle-alert memori--completion-provider-status--icon memori--completion-provider-status--icon-error"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
              />
              <path
                d="M12 9v4"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <section
              class="memori--settings-section"
            >
              <div
                class="memori--settings-section__row"
              >
                <div
                  aria-hidden="true"
                  class="memori--settings-section__icon-box memori--settings-section__icon-box--neutral"
                >
                  <svg
                    class="lucide lucide-eye memori--settings-section__icon"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="3"
                    />
                  </svg>
                </div>
                <div
                  class="memori--settings-section__content"
                >
                  <div
                    class="memori--settings-section__title-inline"
                  >
                    <p
                      class="memori--settings-section__title"
                    >
                      write_and_speak.pagePrivacyExplanation
                    </p>
                  </div>
                  <p
                    class="memori--settings-section__description"
                  >
                    write_and_speak.pagePrivacyExplanationList.authorUsesInfo
                  </p>
                </div>
                <span
                  class="styles-module__root___-ALla"
                >
                  <span
                    class="styles-module__trigger___V2aIF"
                    id="base-ui-:r1q:"
                  >
                    <button
                      aria-label="privacyPolicy"
                      class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--settings-section__info-trigger"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="memori-button__content"
                      >
                        <svg
                          class="lucide lucide-info memori--settings-section__inline-info-icon"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </section>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.tryMeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with completions enabled unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <section
              class="memori--settings-section"
            >
              <div
                class="memori--settings-section__row"
              >
                <div
                  aria-hidden="true"
                  class="memori--settings-section__icon-box memori--settings-section__icon-box--neutral"
                >
                  <svg
                    class="lucide lucide-eye memori--settings-section__icon"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="3"
                    />
                  </svg>
                </div>
                <div
                  class="memori--settings-section__content"
                >
                  <div
                    class="memori--settings-section__title-inline"
                  >
                    <p
                      class="memori--settings-section__title"
                    >
                      write_and_speak.pagePrivacyExplanation
                    </p>
                  </div>
                  <p
                    class="memori--settings-section__description"
                  >
                    write_and_speak.pagePrivacyExplanationList.authorUsesInfo
                  </p>
                </div>
                <span
                  class="styles-module__root___-ALla"
                >
                  <span
                    class="styles-module__trigger___V2aIF"
                    id="base-ui-:r9:"
                  >
                    <button
                      aria-label="privacyPolicy"
                      class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--settings-section__info-trigger"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="memori-button__content"
                      >
                        <svg
                          class="lucide lucide-info memori--settings-section__inline-info-icon"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </section>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.tryMeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with deep thought but unlogged unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <section
              class="memori--settings-section"
            >
              <div
                class="memori--settings-section__row memori--settings-section__row--with-divider"
              >
                <div
                  aria-hidden="true"
                  class="memori--settings-section__icon-box memori--settings-section__icon-box--info"
                >
                  <svg
                    class="lucide lucide-info memori--settings-section__icon"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <path
                      d="M12 16v-4"
                    />
                    <path
                      d="M12 8h.01"
                    />
                  </svg>
                </div>
                <div
                  class="memori--settings-section__content"
                >
                  <p
                    class="memori--settings-section__title"
                  >
                    deepThoughtDisclaimerTitle
                  </p>
                  <div
                    class="memori--settings-section__title-inline"
                  >
                    <p
                      class="memori--settings-section__description"
                    >
                      deepThoughtPreDisclaimerUnlogged
                    </p>
                  </div>
                </div>
                <span
                  class="styles-module__root___-ALla"
                >
                  <span
                    class="styles-module__trigger___V2aIF"
                    id="base-ui-:rp:"
                  >
                    <button
                      aria-label="deepThoughtHelper"
                      class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--settings-section__info-trigger"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="memori-button__content"
                      >
                        <svg
                          class="lucide lucide-info memori--settings-section__inline-info-icon"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
                <button
                  class="memori-button memori-button--toolbar memori-button--sm memori--settings-section__action"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="memori-button__content"
                  >
                    login.login
                  </span>
                </button>
              </div>
              <div
                class="memori--settings-section__row"
              >
                <div
                  aria-hidden="true"
                  class="memori--settings-section__icon-box memori--settings-section__icon-box--neutral"
                >
                  <svg
                    class="lucide lucide-eye memori--settings-section__icon"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="3"
                    />
                  </svg>
                </div>
                <div
                  class="memori--settings-section__content"
                >
                  <div
                    class="memori--settings-section__title-inline"
                  >
                    <p
                      class="memori--settings-section__title"
                    >
                      write_and_speak.pagePrivacyExplanation
                    </p>
                  </div>
                  <p
                    class="memori--settings-section__description"
                  >
                    write_and_speak.pagePrivacyExplanationList.authorUsesInfo
                  </p>
                </div>
                <span
                  class="styles-module__root___-ALla"
                >
                  <span
                    class="styles-module__trigger___V2aIF"
                    id="base-ui-:rr:"
                  >
                    <button
                      aria-label="privacyPolicy"
                      class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--settings-section__info-trigger"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="memori-button__content"
                      >
                        <svg
                          class="lucide lucide-info memori--settings-section__inline-info-icon"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </section>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.tryMeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with deep thought enabled but without permission flag unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <section
              class="memori--settings-section"
            >
              <div
                class="memori--settings-section__row memori--settings-section__row--with-divider"
              >
                <div
                  aria-hidden="true"
                  class="memori--settings-section__icon-box memori--settings-section__icon-box--info"
                >
                  <svg
                    class="lucide lucide-info memori--settings-section__icon"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <path
                      d="M12 16v-4"
                    />
                    <path
                      d="M12 8h.01"
                    />
                  </svg>
                </div>
                <div
                  class="memori--settings-section__content"
                >
                  <p
                    class="memori--settings-section__title"
                  >
                    deepThoughtDisclaimerTitle
                  </p>
                  <div
                    class="memori--settings-section__title-inline"
                  >
                    <p
                      class="memori--settings-section__description"
                    >
                      deepThoughtPreDisclaimerUnlogged
                    </p>
                  </div>
                </div>
                <span
                  class="styles-module__root___-ALla"
                >
                  <span
                    class="styles-module__trigger___V2aIF"
                    id="base-ui-:rv:"
                  >
                    <button
                      aria-label="deepThoughtHelper"
                      class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--settings-section__info-trigger"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="memori-button__content"
                      >
                        <svg
                          class="lucide lucide-info memori--settings-section__inline-info-icon"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
              <div
                class="memori--settings-section__row"
              >
                <div
                  aria-hidden="true"
                  class="memori--settings-section__icon-box memori--settings-section__icon-box--neutral"
                >
                  <svg
                    class="lucide lucide-eye memori--settings-section__icon"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="3"
                    />
                  </svg>
                </div>
                <div
                  class="memori--settings-section__content"
                >
                  <div
                    class="memori--settings-section__title-inline"
                  >
                    <p
                      class="memori--settings-section__title"
                    >
                      write_and_speak.pagePrivacyExplanation
                    </p>
                  </div>
                  <p
                    class="memori--settings-section__description"
                  >
                    write_and_speak.pagePrivacyExplanationList.authorUsesInfo
                  </p>
                </div>
                <span
                  class="styles-module__root___-ALla"
                >
                  <span
                    class="styles-module__trigger___V2aIF"
                    id="base-ui-:r11:"
                  >
                    <button
                      aria-label="privacyPolicy"
                      class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--settings-section__info-trigger"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="memori-button__content"
                      >
                        <svg
                          class="lucide lucide-info memori--settings-section__inline-info-icon"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </section>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.tryMeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with deep thought enabled unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <section
              class="memori--settings-section"
            >
              <div
                class="memori--settings-section__row memori--settings-section__row--with-divider"
              >
                <div
                  aria-hidden="true"
                  class="memori--settings-section__icon-box memori--settings-section__icon-box--info"
                >
                  <svg
                    class="lucide lucide-info memori--settings-section__icon"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <path
                      d="M12 16v-4"
                    />
                    <path
                      d="M12 8h.01"
                    />
                  </svg>
                </div>
                <div
                  class="memori--settings-section__content"
                >
                  <p
                    class="memori--settings-section__title"
                  >
                    deepThoughtDisclaimerTitle
                  </p>
                  <div
                    class="memori--settings-section__title-inline"
                  >
                    <p
                      class="memori--settings-section__description"
                    >
                      deepThoughtPreDisclaimerUnlogged
                    </p>
                  </div>
                </div>
                <span
                  class="styles-module__root___-ALla"
                >
                  <span
                    class="styles-module__trigger___V2aIF"
                    id="base-ui-:rj:"
                  >
                    <button
                      aria-label="deepThoughtHelper"
                      class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--settings-section__info-trigger"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="memori-button__content"
                      >
                        <svg
                          class="lucide lucide-info memori--settings-section__inline-info-icon"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
              <div
                class="memori--settings-section__row"
              >
                <div
                  aria-hidden="true"
                  class="memori--settings-section__icon-box memori--settings-section__icon-box--neutral"
                >
                  <svg
                    class="lucide lucide-eye memori--settings-section__icon"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="3"
                    />
                  </svg>
                </div>
                <div
                  class="memori--settings-section__content"
                >
                  <div
                    class="memori--settings-section__title-inline"
                  >
                    <p
                      class="memori--settings-section__title"
                    >
                      write_and_speak.pagePrivacyExplanation
                    </p>
                  </div>
                  <p
                    class="memori--settings-section__description"
                  >
                    write_and_speak.pagePrivacyExplanationList.authorUsesInfo
                  </p>
                </div>
                <span
                  class="styles-module__root___-ALla"
                >
                  <span
                    class="styles-module__trigger___V2aIF"
                    id="base-ui-:rl:"
                  >
                    <button
                      aria-label="privacyPolicy"
                      class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--settings-section__info-trigger"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="memori-button__content"
                      >
                        <svg
                          class="lucide lucide-info memori--settings-section__inline-info-icon"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </section>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.tryMeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with existing sessionunchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <section
              class="memori--settings-section"
            >
              <div
                class="memori--settings-section__row"
              >
                <div
                  aria-hidden="true"
                  class="memori--settings-section__icon-box memori--settings-section__icon-box--neutral"
                >
                  <svg
                    class="lucide lucide-eye memori--settings-section__icon"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="3"
                    />
                  </svg>
                </div>
                <div
                  class="memori--settings-section__content"
                >
                  <div
                    class="memori--settings-section__title-inline"
                  >
                    <p
                      class="memori--settings-section__title"
                    >
                      write_and_speak.pagePrivacyExplanation
                    </p>
                  </div>
                  <p
                    class="memori--settings-section__description"
                  >
                    write_and_speak.pagePrivacyExplanationList.authorUsesInfo
                  </p>
                </div>
                <span
                  class="styles-module__root___-ALla"
                >
                  <span
                    class="styles-module__trigger___V2aIF"
                    id="base-ui-:r5:"
                  >
                    <button
                      aria-label="privacyPolicy"
                      class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--settings-section__info-trigger"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="memori-button__content"
                      >
                        <svg
                          class="lucide lucide-info memori--settings-section__inline-info-icon"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </section>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.resumeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with integrationConfig unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <section
              class="memori--settings-section"
            >
              <div
                class="memori--settings-section__row"
              >
                <div
                  aria-hidden="true"
                  class="memori--settings-section__icon-box memori--settings-section__icon-box--neutral"
                >
                  <svg
                    class="lucide lucide-eye memori--settings-section__icon"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="3"
                    />
                  </svg>
                </div>
                <div
                  class="memori--settings-section__content"
                >
                  <div
                    class="memori--settings-section__title-inline"
                  >
                    <p
                      class="memori--settings-section__title"
                    >
                      write_and_speak.pagePrivacyExplanation
                    </p>
                  </div>
                  <p
                    class="memori--settings-section__description"
                  >
                    write_and_speak.pagePrivacyExplanationList.authorUsesInfo
                  </p>
                </div>
                <span
                  class="styles-module__root___-ALla"
                >
                  <span
                    class="styles-module__trigger___V2aIF"
                    id="base-ui-:r1d:"
                  >
                    <button
                      aria-label="privacyPolicy"
                      class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--settings-section__info-trigger"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="memori-button__content"
                      >
                        <svg
                          class="lucide lucide-info memori--settings-section__inline-info-icon"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </section>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.tryMeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with login required unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--needsLogin"
      >
        <p>
          write_and_speak.requirePositionHelp
        </p>
        <button
          class="memori-button memori-button--primary memori-button--md"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__icon"
          >
            <svg
              class="lucide lucide-user"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="12"
                cy="7"
                r="4"
              />
            </svg>
          </span>
          <span
            class="memori-button__content"
          >
            login.login
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with multilangual unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--description"
      >
        <div
          class="memori--language-row"
        >
          <span
            class="memori--language-row__label"
          >
            write_and_speak.chatLanguageLabel
          </span>
          <div
            class="memori--language-row__control"
          >
            <div
              class="memori-combobox memori-combobox--language-chooser memori--language-row__combobox"
            >
              <label
                class="memori-combobox__label"
                for=":r1g:"
                id=":r1g:-label"
              >
                write_and_speak.chatLanguageLabel
              </label>
              <button
                aria-expanded="false"
                aria-haspopup="dialog"
                aria-labelledby=":r1g:-label"
                class="memori-combobox__trigger"
                id=":r1g:"
                role="combobox"
                tabindex="0"
                type="button"
              >
                <span
                  class="memori-combobox__value"
                >
                  English
                </span>
                <span
                  aria-hidden="true"
                  class="memori-combobox__trigger-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down"
                    fill="none"
                    height="16"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </span>
              </button>
              <input
                aria-hidden="true"
                id="base-ui-:r1h:"
                name="user-lang-pref"
                style="overflow: hidden; white-space: nowrap; position: fixed; top: 0px; left: 0px; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px;"
                tabindex="-1"
                value="EN"
              />
            </div>
          </div>
        </div>
        <div
          class="memori--start-panel__divider"
          role="presentation"
        />
        <section
          class="memori--start-panel__mobile-info"
        >
          <div
            class="memori--start-panel__mobile-info-content"
          >
            <section
              class="memori--settings-section"
            >
              <div
                class="memori--settings-section__row"
              >
                <div
                  aria-hidden="true"
                  class="memori--settings-section__icon-box memori--settings-section__icon-box--neutral"
                >
                  <svg
                    class="lucide lucide-eye memori--settings-section__icon"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="3"
                    />
                  </svg>
                </div>
                <div
                  class="memori--settings-section__content"
                >
                  <div
                    class="memori--settings-section__title-inline"
                  >
                    <p
                      class="memori--settings-section__title"
                    >
                      write_and_speak.pagePrivacyExplanation
                    </p>
                  </div>
                  <p
                    class="memori--settings-section__description"
                  >
                    write_and_speak.pagePrivacyExplanationList.authorUsesInfo
                  </p>
                </div>
                <span
                  class="styles-module__root___-ALla"
                >
                  <span
                    class="styles-module__trigger___V2aIF"
                    id="base-ui-:r1k:"
                  >
                    <button
                      aria-label="privacyPolicy"
                      class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--settings-section__info-trigger"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="memori-button__content"
                      >
                        <svg
                          class="lucide lucide-info memori--settings-section__inline-info-icon"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M12 16v-4"
                          />
                          <path
                            d="M12 8h.01"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </section>
          </div>
        </section>
        <p
          class="memori--start-description"
        >
          write_and_speak.pageTryMeExplanation
        </p>
        <button
          class="memori-button memori-button--primary memori-button--lg"
          style="font-weight: var(--memori-text-weight-bold);"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__content"
          >
            write_and_speak.tryMeButton
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with position required unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <div
      class="memori--start-panel__body"
    >
      <div
        class="memori--title-container"
      >
        <picture
          class="memori--avatar"
        >
          <source
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
          <img
            alt="Memori"
            src="https://aisuru.com/images/aisuru/square_logo.png"
          />
        </picture>
        <div
          class="memori--title-container__content"
        >
          <h2
            class="memori--title"
          >
            Memori
          </h2>
          <div
            class="memori-expandable memori--description-text"
          >
            <div
              class="memori-expandable__inner"
              style="max-height: 9999px;"
            >
              Lorem ipsum.
            </div>
          </div>
        </div>
        <div
          class="memori--completion-provider-status--loading"
        >
          <div
            class="memori-spin memori-spin--spinning"
          >
            <div
              aria-label="Loading"
              aria-live="polite"
              class="memori-spin__overlay"
              role="status"
            >
              <div
                class="memori-spin__container"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-loader-circle memori-spin__icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-6.219-8.56"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="memori--needsPosition"
      >
        <p>
          write_and_speak.requirePositionHelp
        </p>
        <div
          class="memori--needsPosition-actions"
        >
          <button
            class="memori-button memori-button--primary memori-button--md"
            style="width: 100%;"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-map-pin"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
            </span>
            <span
              class="memori-button__content"
            >
              write_and_speak.useMyPosition
            </span>
          </button>
          <button
            class="memori-button memori-button--outline memori-button--md"
            style="width: 100%;"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-map-pin-off"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.75 7.09a3 3 0 0 1 2.16 2.16"
                />
                <path
                  d="M17.072 17.072c-1.634 2.17-3.527 3.912-4.471 4.727a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 1.432-4.568"
                />
                <path
                  d="m2 2 20 20"
                />
                <path
                  d="M8.475 2.818A8 8 0 0 1 20 10c0 1.183-.31 2.377-.81 3.533"
                />
                <path
                  d="M9.13 9.13a3 3 0 0 0 3.74 3.74"
                />
              </svg>
            </span>
            <span
              class="memori-button__content"
            >
              write_and_speak.dontWantToProvidePosition
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
